# VocabLearning

./: .clang-format  .gitignore  CMakeLists.txt  bootstrap.sh  builder.ui  mainmenu.ui
src/: dbModule.c  dbModule.h  main.c
src/Models/: dictionaryEntryModel.c  dictionaryEntryModel.h
src/Signals/: dbModuleSignals.c  dbModuleSignals.h  dictionaryEntryModelSignals.c  dictionaryEntryModelSignals.h
